--- a/public/game.css
+++ b/public/game.css
@@ -2,6 +2,8 @@
     display: flex;
     margin-bottom: 1rem;
     margin-top: 1rem;
+    margin-left: auto;
+    margin-right: auto;
     width: 100%;
     height: 100%;
     font-size: 3rem;
