--- a/public/style.css
+++ b/public/style.css
@@ -15,9 +15,10 @@
 
 h1 {
     text-align: center;
-    font-size: 5.4rem;
+    font-size: 4rem;
     color: #FFF;
     margin-bottom: 5rem;
+    margin-top: 5rem;
 }
 
 h2 {
@@ -27,6 +28,7 @@ h2 {
 
 p {
     font-size: 2.5rem;
+    width: fit-content;
 }
 
 .home-title {
@@ -36,8 +38,8 @@ p {
 }
 
 .container{
-    width: 100vw;
-    height: 100vh;
+    width: fit-content;
+    height: fit-content;
     display: flex;
     justify-content: center;
     align-items: center;
